--- a/config/glove80.conf
+++ b/config/glove80.conf
@@ -2,3 +2,8 @@
 # https://zmk.dev/docs/config/combos
 
 CONFIG_ZMK_COMBO_MAX_COMBOS_PER_KEY=8
+
+# https://zmk.dev/docs/config/behaviors#macro
+
+CONFIG_ZMK_MACRO_DEFAULT_WAIT_MS=30
+CONFIG_ZMK_MACRO_DEFAULT_TAP_MS=30
